# smpl

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml
include/: smpl.hpp
src/: main.cpp  smpl.cpp
test/: test.cpp
test/data/: basic.smpl
